--- a/dashboard.css
+++ b/dashboard.css
@@ -8,7 +8,8 @@ header {
   background-color: #fff;
   padding: 16px;
   display: flex;
-  justify-content: space-between;
+  justify-content:
+    space-between;
   align-items: center;
   border: 1px solid #edecef;
 }
@@ -20,7 +21,8 @@ header {
 
 .search-container {
   display: flex;
-  align-items: center;
+  align-items:
+    center;
 }
 
 .search-container input[type="text"] {
@@ -42,16 +44,19 @@ header {
   font-size: 1.5rem;
   color: #777;
   margin-left: 10px;
+  padding: 10px;
 }
 
 .icons i:hover {
-  font-size: 1.5rem;
+  font-size:
+    1.5rem;
   color: #81e489;
   margin-left: 10px;
 }
 
 .notification-badge {
-  position: absolute;
+  position:
+    absolute;
   top: 8px;
   right: 8px;
   background-color: #12c344;
@@ -63,24 +68,40 @@ header {
 }
 
 .icons img {
-  width: 58px;
-  height: 58px;
+  width: 50px;
+  /* Set the width of the image */
+  height: 50px;
+  /* Set the height of the image */
   border-radius: 50%;
-  margin-left: 10px;
+  /* Make it circular */
+  border: 2px solid #fff;
+  /* Add a border */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* Add a subtle shadow */
 }
 
-.image img {
-  width: 150px;
+
+
+.sidebar .sidebar-image {
+  text-align: center;
+  margin-bottom: 20px;
+
+}
+
+.sidebar .sidebar-image {
+  width: 200px;
+  height: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
 }
 
 .sidebar {
-  background-color: #f8f9fa;
+  background-color: #f3f2f2;
   height: 100vh;
   padding: 20px;
   width: 250px;
   position: fixed;
-  top: 80px;
+  top: 0;
   left: 0;
   bottom: 0;
   z-index: 1;
@@ -96,6 +117,7 @@ header {
     width: 100%;
     max-width: 300px;
     position: static;
+    /* Change position to static for smaller screens */
     height: auto;
     overflow-y: visible;
   }
@@ -103,61 +125,21 @@ header {
   .main-content {
     margin-left: 0;
   }
-}
-
-.additional-content {
-  margin-top: 20px;
-  margin-left: 250px;
-  padding: 20px;
-  background-color: #fff;
-}
-
-
-
-.sidebar {
-  padding: 10px;
-}
-
-.sidebar a {
-  display: block;
-  color: black;
-  /* Link text color */
-  text-decoration: none;
-  /* Remove underline */
-  padding: 10px;
-  /* Add padding to links */
-}
-
-.sidebar a:hover {
-  background-color: #ddd;
-
-}
-
-.sidebar-h2 {
-  margin-top: 20px;
-  color: #666;
-
-}
-
-.sidebar img {
-  width: 20px;
-  margin-right: 10px;
 }
 
 @media screen and (max-width: 767.98px) {
   .sidebar {
     width: 100%;
-    max-width: 300px;
+    max-width:
+      300px;
     position: static;
     height: auto;
     overflow-y: visible;
     top: 0;
-
   }
 
   .main-content {
     margin-left: 0;
-
   }
 }
 
@@ -166,7 +148,8 @@ header {
   color: #333;
   padding: 10px 20px;
   text-decoration: none;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s,
+    color 0.3s;
 }
 
 .sidebar a.active {
@@ -176,7 +159,8 @@ header {
 }
 
 .sidebar a:hover:not(.active) {
-  background-color: #23c55f;
+  background-color:
+    #23c55f;
   color: white;
   border-radius: 10px;
 }
@@ -189,8 +173,8 @@ header {
   margin: 20px 0;
   color: #a3a2aa;
   font-size: 1em;
-  text-transform: uppercase;
-
+  text-transform:
+    uppercase;
 }
 
 .h2 {
@@ -221,27 +205,33 @@ header {
 }
 
 .grid-item {
-  background-color: #f3f3f3;
+  background-color: #fefffe;
   padding: 20px;
   border-radius: 8px;
+  box-shadow:
+    20px 20px 40px #efeef1;
 }
 
 .grid-item:first-child {
   background-color: #22c45f;
-  color: #fff;
-  box-shadow: 20px 20px 40px grey;
+  font-size: 20px;
+  box-shadow:
+    20px 20px 40px grey;
   padding: 20px;
 }
 
-.grid-item:first-child ul {
-  list-style: none;
+.grid-item:first-child ul li {
+  color: #fff;
+  list-style:
+    none;
   padding: 0;
 }
 
 .grid-item:first-child li span {
   font-weight: bold;
-  color: #fff;
-  font-size: 40px;
+  color:
+    #fff;
+  font-size: 35px;
 }
 
 .grid-item:first-child ul li p {
@@ -249,8 +239,11 @@ header {
   color: #ebe4e4;
 }
 
+
+
 .grid-item:first-child ul li i.bi.bi-arrow-up {
-  margin-right: 5px;
+  margin-right:
+    5px;
   color: #e4e5e5;
 }
 
@@ -261,36 +254,44 @@ header {
 
 .grid-item ul li span {
   font-weight: bold;
-  font-size: 34px;
-  color: #666;
+  font-size: 30px;
+  color: #6c7d92;
 }
 
 .grid-item ul li {
   margin-top: 10px;
+  font-size: 20px;
+  color: #a8b3be;
 }
 
 .grid-item ul li p {
   display: inline;
-  font-size: 14px;
+  font-size: 11px;
   color: #666;
 }
 
 .grid-item ul li i.bi-arrow-up {
-  margin-right: 5px;
-  color: #ffff;
+  margin-right:
+    5px;
+  color: black;
+}
+
+canvas {
+  height: 100%;
+  width: 100%;
 }
 
 #organicVsPaidChartContainer {
-  width: 150px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
   margin: 0 auto;
 }
 
 #organicVsPaidChart {
   width: 100%;
-  height: 100%;
+  height: auto;
+  display: block;
 }
-
 
 .h4 {
   text-align: left;
@@ -298,6 +299,179 @@ header {
   font-size: 1.5rem;
   color: #333;
   clear: both;
+}
+
+
+.additional-content-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-gap: 20px;
+  margin: 20px;
+}
+
+
+.additional-content {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.real-time-link {
+  display: block;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #007bff;
+  /* Link color */
+}
+
+/* Styles for user traffic chart container */
+#userTrafficChartContainer {
+  margin-top: 20px;
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
+  gap: 20px;
+
+}
+
+.grid1,
+.grid2,
+.grid3 {
+  background-color: #f0f0f0;
+  height: 100%;
+  padding: 20px;
+
+}
+
+.grid1 {
+  margin-left: 30px;
+  border: 1px solid #e6e7e9;
+  border-radius: 20px;
+  background-color: #fefffe;
+}
+
+.grid2,
+.grid3 {
+  border: 1px solid #e6e7e9;
+  border-radius: 20px;
+  background-color: #fefffe;
+}
+
+hr {
+  color: #12c344;
+}
+
+#user-traffic-heading {
+  font-size: 24px;
+  /* Adjust the font size as needed */
+  color: #333;
+  /* Adjust the color */
+  margin-bottom: 5px;
+  /* Add spacing between heading and number */
+}
+
+#user-traffic-number {
+  font-size: 36px;
+  color: black;
+  font-weight: bold;
+}
+
+#user-traffic-description {
+  font-size: 16px;
+
+  color: #555;
+}
+
+.simple-bar-chart {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+
+}
+
+.item {
+  flex: 1 1 calc(33.33% - 10px);
+  width: 20px;
+  /* Three items per row */
+  background-color: #fff;
+  /* Background color for chart items */
+  border-radius: 5px;
+  /* Rounded corners */
+  padding: 0;
+  /* Padding inside chart items */
+  gap: 10px;
+  text-align: center;
+  /* Center align text */
+}
+
+.label {
+  font-weight: bold;
+  /* Bold font for labels */
+}
+
+.value {
+  color: #555;
+  /* Color for values */
+}
+
+
+.simple-bar-chart {
+  --line-opacity: 0.25;
+  --item-gap: 2%;
+  --item-default-color: #060606;
+
+  height: 10rem;
+  display: grid;
+  grid-auto-flow: column;
+  gap: var(--item-gap);
+  align-items: end;
+  padding-inline: var(--item-gap);
+  --padding-block: 1.5rem;
+  /*space for labels*/
+  padding-block: var(--padding-block);
+  position: relative;
+  isolation: isolate;
+}
+
+.simple-bar-chart::after {
+  content: "";
+  position: absolute;
+  inset: var(--padding-block) 0;
+  z-index: -1;
+  --line-width: 1px;
+  --line-spacing: calc(100% / var(--line-count));
+  background-image: repeating-linear-gradient(to top, transparent 0 calc(var(--line-spacing) - var(--line-width)), var(--line-color) 0 var(--line-spacing));
+  box-shadow: 0 var(--line-width) 0 var(--line-color);
+  opacity: var(--line-opacity);
+}
+
+.simple-bar-chart>.item {
+  height: calc(1% * var(--val));
+  background-color: var(--clr, var(--item-default-color));
+  position: relative;
+  animation: item-height 1s ease forwards
+}
+
+@keyframes item-height {
+  from {
+    height: 0
+  }
+}
+
+.simple-bar-chart>.item>* {
+  position: absolute;
+  text-align: center
+}
+
+.simple-bar-chart>.item>.label {
+  inset: 100% 0 auto 0
+}
+
+.simple-bar-chart>.item>.value {
+  inset: auto 0 100% 0
 }
 
 @media screen and (max-width: 767.98px) {
