--- a/dashboard.css
+++ b/dashboard.css
@@ -332,8 +332,8 @@ canvas {
 .grid-container2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-
   gap: 20px;
+  grid-auto-rows: minmax(100px, auto);
 
 }
 
@@ -342,11 +342,12 @@ canvas {
 .grid3 {
   background-color: #f0f0f0;
   height: 100%;
-  padding: 20px;
+  padding: 60px;
 
 }
 
 .grid1 {
+  padding: 60px;
   margin-left: 30px;
   border: 1px solid #e6e7e9;
   border-radius: 20px;
@@ -360,10 +361,6 @@ canvas {
   background-color: #fefffe;
 }
 
-hr {
-  color: #12c344;
-}
-
 #user-traffic-heading {
   font-size: 24px;
   color: #333;
@@ -371,14 +368,13 @@ hr {
 }
 
 #user-traffic-number {
-  font-size: 36px;
+  font-size: 30px;
   color: black;
   font-weight: bold;
 }
 
 #user-traffic-description {
   font-size: 16px;
-
   color: #555;
 }
 
@@ -410,9 +406,11 @@ hr {
 }
 
 
+
 .simple-bar-chart {
+
   --line-opacity: 0.25;
-  --item-gap: 2%;
+  --item-gap: 2px;
   --item-default-color: #060606;
 
   height: 10rem;
@@ -421,11 +419,12 @@ hr {
   gap: var(--item-gap);
   align-items: end;
   padding-inline: var(--item-gap);
-  --padding-block: 1.5rem;
-  /*space for labels*/
+  --padding-block: 20px;
+
   padding-block: var(--padding-block);
   position: relative;
   isolation: isolate;
+  margin-top: 0;
 }
 
 .simple-bar-chart::after {
@@ -445,6 +444,34 @@ hr {
   background-color: var(--clr, var(--item-default-color));
   position: relative;
   animation: item-height 1s ease forwards
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.real-time-link {
+  margin-bottom: 20px;
+  padding: 80px;
+
 }
 
 @keyframes item-height {
