--- a/campaign.css
+++ b/campaign.css
@@ -108,7 +108,7 @@ header {
 
 
 .sidebar {
-    background-color: #e3e6e9;
+    background-color: #f2f3f2;
     height: 100vh;
     padding: 20px;
     width: 250px;
@@ -202,68 +202,248 @@ header {
     padding: 20px;
     width: calc(100% - 300px);
     float: right;
-    background-color: #f4f4f4;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: #ffff;
 
 }
 
-.h2 {
-    margin: 0;
-    padding: 10px 0;
-    font-size: 24px;
-    color: #333;
+.grid-item ul li img {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+    margin-right: 5px;
 
-}
-
-.h2 span {
-    color: #23c55f;
-    font-weight: bold;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 0x;
-    margin-left: 35px;
-    margin-right: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 0px;
+
 }
 
 .grid-item {
-    background-color: #fefffe;
+    border-radius: 2px;
+    border: 1px solid #ccc;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow:
-        20px 20px 40px #efeef1;
 }
+
 
 .grid-item ul {
     list-style: none;
     padding: 0;
+
 }
 
-.grid-item ul li span {
-    font-weight: bold;
-    font-size: 30px;
-    color: #6c7d92;
-}
 
 .grid-item ul li {
-    margin-top: 10px;
-    font-size: 20px;
-    color: #a8b3be;
-}
-
-.grid-item ul li p {
-    display: inline;
-    font-size: 11px;
-    color: #666;
-}
-
-.grid-item ul li i.bi-arrow-up {
-    margin-right:
-        5px;
+    display: flex;
     color: black;
+    font-weight: bold;
+    align-items: center;
+    margin-bottom: 5px;
+
+}
+
+
+.grid-item ul li img {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+}
+
+
+.grid-item ul li span {
+    color: #333;
+
+}
+
+
+.followers-container {
+    max-width: 800px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+
+}
+
+.followers-container h1 {
+    font-size: 1.5em;
+    color: black;
+    padding: 20px;
+}
+
+.followers-container h2 {
+    color: #39393b;
+    padding: 20px;
+    font-size: 15px;
+}
+
+.followers-container p {
+    color: #9da0aa;
+    font-size: 10px;
+}
+
+.horizontal-list {
+    list-style-type: none;
+    padding: 20px;
+    margin: 0;
+    display: flex;
+}
+
+.horizontal-list li {
+    margin-right: 20px;
+    border: 1px solid #f4f4f6;
+    padding: 20px;
+    margin: 10px;
+    font-size: 1.5em;
+
+}
+
+.horizontal-list li1 {
+    margin-right: 0;
+    background-color: #e7f7ff;
+
+}
+
+.simple-bar-chart {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-bottom: 20px;
+}
+
+.item {
+    flex: 1 1 calc(33.33% - 10px);
+    width: 30px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0;
+    gap: 10px;
+    text-align: center;
+}
+
+.simple-bar-chart {
+    --line-count: 10;
+    --line-color: currentcolor;
+    --line-opacity: 0.25;
+    --item-gap: 2%;
+    --item-default-color: #060606;
+
+    height: 10rem;
+    width: 40em;
+    display: grid;
+    grid-auto-flow: column;
+    gap: var(--item-gap);
+    align-items: end;
+    padding-inline: var(--item-gap);
+    --padding-block: 1.5rem;
+    /*space for labels*/
+    padding-block: var(--padding-block);
+    position: relative;
+    isolation: isolate;
+}
+
+.simple-bar-chart::after {
+    content: "";
+    position: absolute;
+    inset: var(--padding-block) 0;
+    z-index: -1;
+    --line-width: 1px;
+    --line-spacing: calc(100% / var(--line-count));
+    background-image: repeating-linear-gradient(to top, transparent 0 calc(var(--line-spacing) - var(--line-width)), var(--line-color) 0 var(--line-spacing));
+    box-shadow: 0 var(--line-width) 0 var(--line-color);
+    opacity: var(--line-opacity);
+}
+
+.simple-bar-chart>.item {
+    height: calc(1% * var(--val));
+    background-color: var(--clr, var(--item-default-color));
+    position: relative;
+    animation: item-height 1s ease forwards
+}
+
+@keyframes item-height {
+    from {
+        height: 0
+    }
+}
+
+.simple-bar-chart>.item>* {
+    position: absolute;
+    text-align: center
+}
+
+.simple-bar-chart>.item>.label {
+    inset: 100% 0 auto 0
+}
+
+.simple-bar-chart>.item>.value {
+    inset: auto 0 100% 0
+}
+
+.posts-container {
+    max-width: 800px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+
+}
+
+.posts-container {
+    max-width: 100%;
+    overflow: hidden;
+    max-width: 1000px;
+}
+
+.posts {
+    font-size: 1.5em;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+
+.post-categories {
+    list-style-type: none;
+    padding: 20px;
+    margin: 0;
+}
+
+.post-categories li {
+    font-size: 20px;
+    padding: 10px;
+    margin-bottom: 0;
+    background-color: #ffff;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+
+.post-categories li.active {
+    border-bottom: 2px solid #2fb8fc;
+}
+
+
+
+.content {
+    display: none;
+}
+
+/* Show content for active category */
+.active-content {
+    display: block;
 }
 
 @media screen and (max-width: 767.98px) {
