--- a/dashboard.css
+++ b/dashboard.css
@@ -293,6 +293,23 @@ canvas {
   display: block;
 }
 
+
+
+
+.p1 {
+  display: inline-block;
+  padding: 40px;
+  background-color: #00bfff;
+  margin: 0;
+
+}
+
+.female {
+  background-color: #ef2aa0;
+  margin-right: 0;
+
+}
+
 .h4 {
   text-align: left;
   margin-top: 20px;
@@ -333,7 +350,7 @@ canvas {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(50px, auto);
 
 }
 
@@ -341,17 +358,18 @@ canvas {
 .grid2,
 .grid3 {
   background-color: #f0f0f0;
-  height: 100%;
+  height: 70%;
   padding: 60px;
 
 }
 
 .grid1 {
-  padding: 60px;
+  padding: 20px;
   margin-left: 30px;
   border: 1px solid #e6e7e9;
   border-radius: 20px;
   background-color: #fefffe;
+
 }
 
 .grid2,
@@ -406,20 +424,19 @@ canvas {
 }
 
 
-
 .simple-bar-chart {
-
   --line-opacity: 0.25;
   --item-gap: 2px;
   --item-default-color: #060606;
 
   height: 10rem;
+  width: 10rem;
   display: grid;
   grid-auto-flow: column;
-  gap: var(--item-gap);
+  gap: 0 !important;
   align-items: end;
-  padding-inline: var(--item-gap);
-  --padding-block: 20px;
+  padding-inline: 0;
+  --padding-block: 0px;
 
   padding-block: var(--padding-block);
   position: relative;
@@ -427,24 +444,16 @@ canvas {
   margin-top: 0;
 }
 
-.simple-bar-chart::after {
-  content: "";
-  position: absolute;
-  inset: var(--padding-block) 0;
-  z-index: -1;
-  --line-width: 1px;
-  --line-spacing: calc(100% / var(--line-count));
-  background-image: repeating-linear-gradient(to top, transparent 0 calc(var(--line-spacing) - var(--line-width)), var(--line-color) 0 var(--line-spacing));
-  box-shadow: 0 var(--line-width) 0 var(--line-color);
-  opacity: var(--line-opacity);
-}
+.item {
 
-.simple-bar-chart>.item {
+  justify-content: space-evenly;
   height: calc(1% * var(--val));
   background-color: var(--clr, var(--item-default-color));
   position: relative;
-  animation: item-height 1s ease forwards
+  animation: item-height 1s ease forwards;
+
 }
+
 
 table {
   width: 100%;
@@ -469,6 +478,7 @@ tr:nth-child(even) {
 }
 
 .real-time-link {
+  font-size: 1.5em;
   margin-bottom: 20px;
   padding: 80px;
 
@@ -480,18 +490,7 @@ tr:nth-child(even) {
   }
 }
 
-.simple-bar-chart>.item>* {
-  position: absolute;
-  text-align: center
-}
 
-.simple-bar-chart>.item>.label {
-  inset: 100% 0 auto 0
-}
-
-.simple-bar-chart>.item>.value {
-  inset: auto 0 100% 0
-}
 
 @media screen and (max-width: 767.98px) {
   .sidebar {
