--- a/campaign.css
+++ b/campaign.css
@@ -259,6 +259,7 @@ header {
 
 
 .followers-container {
+
     max-width: 800px;
     background-color: #ffffff;
     padding: 20px;
@@ -268,43 +269,28 @@ header {
 
 }
 
-.followers-container h1 {
-    font-size: 1.5em;
-    color: black;
-    padding: 20px;
-}
-
-.followers-container h2 {
-    color: #39393b;
-    padding: 20px;
-    font-size: 15px;
-}
-
-.followers-container p {
-    color: #9da0aa;
-    font-size: 10px;
-}
-
-.horizontal-list {
-    list-style-type: none;
-    padding: 20px;
-    margin: 0;
+.socials-container {
     display: flex;
-}
-
-.horizontal-list li {
-    margin-right: 20px;
-    border: 1px solid #f4f4f6;
+    max-width: 800px;
+    background-color: #ffffff;
     padding: 20px;
-    margin: 10px;
-    font-size: 1.5em;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+}
+
+.socials-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 100px;
+
 
 }
 
-.horizontal-list li1 {
+.socials-container div:last-child {
     margin-right: 0;
-    background-color: #e7f7ff;
-
+    /* Remove margin from the last social media item */
 }
 
 .simple-bar-chart {
@@ -444,6 +430,36 @@ li {
 /* Show content for active category */
 .active-content {
     display: block;
+}
+
+.socials-container {
+    display: flex;
+    max-width: 800px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+}
+
+.socials-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 100px;
+
+
+}
+
+.socials-container div:last-child {
+    margin-right: 0;
+    /* Remove margin from the last social media item */
+}
+
+.socials-container div img {
+    width: 20px;
+    margin-bottom: 5px;
+    /* Adjust the margin between the image and text */
 }
 
 @media screen and (max-width: 767.98px) {
