--- a/campaign.css
+++ b/campaign.css
@@ -102,7 +102,7 @@ header {
 .sidebar .sidebar-image {
     width: 200px;
     height: auto;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 
 }
 
@@ -119,20 +119,14 @@ header {
     z-index: 1;
 }
 
-.sidebar {
-    padding: 10px;
-}
+
 
 .sidebar a {
     display: block;
     color: black;
     text-decoration: none;
     padding: 10px;
-}
-
-.sidebar a:hover {
-    background-color: #ddd;
-
+    top: 20px;
 }
 
 .sidebar-h2 {
@@ -146,16 +140,8 @@ header {
     margin-right: 10px;
 }
 
-
-.sidebar a {
-    display: block;
-    color: #333;
-    padding: 10px 20px;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-}
-
 .sidebar a.active {
+    margin-top: 20px;
     background-color: #23c55f;
     color: white;
     border-radius: 10px;
