--- a/metrics.css
+++ b/metrics.css
@@ -183,7 +183,23 @@ header {
 }
 
 .graph-container {
-    max-width: 500px;
+    display: flex;
+    column-gap: 50px;
+}
+
+.box-1 {
+    width: 800px;
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+    margin-left: 40px;
+
+}
+
+.box-2 {
+    width: 400px;
     background-color: #ffffff;
     padding: 40px;
     border-radius: 10px;
@@ -191,7 +207,115 @@ header {
     border: 1px solid #ededf1;
 }
 
+.simple-bar-chart {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
 
+}
+
+.item {
+    flex: 1 1 calc(33.33% - 10px);
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0;
+    gap: 10px;
+    text-align: center;
+}
+
+.label {
+    font-weight: bold;
+
+}
+
+.value {
+    color: #555;
+
+}
+
+.simple-bar-chart {
+    --line-opacity: 0.25;
+    --item-gap: 2px;
+    --item-default-color: #060606;
+
+    height: 4rem;
+    width: 10rem;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 10px;
+    align-items: end;
+    padding-inline: 0;
+    --padding-block: 0px;
+
+    padding-block: var(--padding-block);
+    position: relative;
+    isolation: isolate;
+    margin-top: 0;
+}
+
+.item {
+
+    justify-content: space-evenly;
+    height: calc(1% * var(--val));
+    background-color: var(--clr, var(--item-default-color));
+    position: relative;
+    animation: item-height 1s ease forwards;
+
+}
+
+table {
+    width: 100%;
+    height: 20px;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+th,
+td {
+    padding: 5px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+.container1 {
+    display: flex;
+    column-gap: 50px;
+}
+
+.map {
+    width: 800px;
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+    margin-left: 40px;
+
+}
+
+.sessions {
+    width: 400px;
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 10px;
+    margin-top: 20px;
+    border: 1px solid #ededf1;
+
+}
 
 .sec-center {
     margin-bottom: 15px;
