--- a/metrics.css
+++ b/metrics.css
@@ -185,6 +185,8 @@ header {
 .graph-container {
     display: flex;
     column-gap: 50px;
+
+
 }
 
 .box-1 {
@@ -192,84 +194,55 @@ header {
     background-color: #ffffff;
     padding: 40px;
     border-radius: 10px;
-    margin-top: 20px;
-    border: 1px solid #ededf1;
-    margin-left: 40px;
+    border: 2px solid #f1f0f3;
+    margin-left: 50px;
+    height: 400px;
+
+}
+
+.user-traffic-heading span {
+    display: block;
+    font-weight: bold;
+    font-size: 2em;
+
+}
+
+.user-traffic-heading {
+    font-weight: normal;
+    font-size: 20px;
 
 }
 
 .box-2 {
     width: 400px;
     background-color: #ffffff;
-    padding: 40px;
+    padding: 20px;
     border-radius: 10px;
-    margin-top: 20px;
     border: 1px solid #ededf1;
-}
+    height: 435px;
 
-.simple-bar-chart {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
 
 }
 
-.item {
-    flex: 1 1 calc(33.33% - 10px);
-    width: 10px;
-    height: 10px;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 0;
-    gap: 10px;
-    text-align: center;
-}
-
-.label {
-    font-weight: bold;
+#myChart {
+    height: 20px;
+    width: 20px;
 
 }
 
-.value {
-    color: #555;
-
+.link {
+    color: #12c344;
+    padding: 20px;
+    font-size: 1em;
 }
 
-.simple-bar-chart {
-    --line-opacity: 0.25;
-    --item-gap: 2px;
-    --item-default-color: #060606;
 
-    height: 4rem;
-    width: 10rem;
-    display: grid;
-    grid-auto-flow: column;
-    gap: 10px;
-    align-items: end;
-    padding-inline: 0;
-    --padding-block: 0px;
-
-    padding-block: var(--padding-block);
-    position: relative;
-    isolation: isolate;
-    margin-top: 0;
-}
-
-.item {
-
-    justify-content: space-evenly;
-    height: calc(1% * var(--val));
-    background-color: var(--clr, var(--item-default-color));
-    position: relative;
-    animation: item-height 1s ease forwards;
-
-}
 
 table {
     width: 100%;
-    height: 20px;
+    height: 3px;
     border-collapse: collapse;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 th,
@@ -377,4 +350,8 @@ tr:hover {
     font-weight: bold;
     margin-left: 100px;
     font-size: 24px;
+}
+
+.sessions {
+    height: 200px;
 }
